force-app/main/default/objects/Training_Program__c/fields/Duration_in_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_days__c</fullName>
    <label>Duration in days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>