force-app/main/default/objects/Training_Program__c/fields/Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Task_Count__c</fullName>
    <label>Task Count</label>
    <summaryForeignKey>Program_Task_Assignment__c.Training_Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>