force-app/main/default/objects/Training_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Count__c</columns>
    <columns>Duration_in_days__c</columns>
    <columns>Expected_Duration_In_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>